--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-profile">
-                    <div class="hero-headshot">Professional Headshot</div>
+                    <div class="hero-headshot"><img src="images/headshot.jpg" alt="Parul Kudtarkar" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;" /></div>
                     <div class="hero-intro">
                         <h1>Parul Kudtarkar</h1>
                         <div class="hero-tagline">Senior Bioinformatician using AI and machine learning to advance human health.</div>
@@ -749,7 +749,7 @@
     <div class="page" id="publications">
         <div class="container">
             <div class="publications-hero">
-                <div class="cover-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); height: 400px; display: flex; align-items: center; justify-content: center; color: white; font-size: 24px;">Cell Metabolism Cover Image</div>
+                <img src="images/cover-image.jpg" class="cover-image" alt="Cell Metabolism Cover Image" />
                 <p style="font-size: 19px; color: var(--text-secondary); margin-top: 30px; max-width: 800px; margin-left: auto; margin-right: auto;">The Cell Metabolism cover image that accompanies the article illustrates how the T2DKP integrates multiple types of genetic and genomic data to provide insights that can be the building blocks for new therapeutics.</p>
             </div>
 
