--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             <div class="container">
                 <h2 class="section-title">Work Experience</h2>
                 <div class="work-item">
-                    <div class="work-logo">CMD</div>
+                    <div class="work-logo"><img src="images/work/cmd.jpg" alt="cmd" /></div>
                     <div class="work-content">
                         <h3>Common Metabolic Diseases</h3>
                         <div class="work-dates">June 2017 – Present</div>
@@ -662,7 +662,7 @@
                     </div>
                 </div>
                 <div class="work-item">
-                    <div class="work-logo">PKB</div>
+                    <div class="work-logo"><img src="images/work/pankbase.png" alt="pankbase" /></div>
                     <div class="work-content">
                         <h3>PanKbase</h3>
                         <div class="work-dates">February 2024 – Present</div>
@@ -670,7 +670,7 @@
                     </div>
                 </div>
                 <div class="work-item">
-                    <div class="work-logo">ECH</div>
+                    <div class="work-logo"><img src="images/work/echinobase.png" alt="echinobase" /></div>
                     <div class="work-content">
                         <h3>Echinobase</h3>
                         <div class="work-dates">January 2011 – June 2017</div>
@@ -678,7 +678,7 @@
                     </div>
                 </div>
                 <div class="work-item">
-                    <div class="work-logo">CLD</div>
+                    <div class="work-logo"><img src="images/work/cloud.png" alt="cloud" /></div>
                     <div class="work-content">
                         <h3>Cloud Computing for Comparative Genomics</h3>
                         <div class="work-dates">January 2008 – December 2010</div>
