--- a/index.html
+++ b/index.html
@@ -311,17 +311,19 @@
         .education-logo {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, var(--accent-gold) 0%, var(--accent-midnight) 100%);
+            background: var(--foreground);
             border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-weight: 600;
-            font-size: 12px;
             flex-shrink: 0;
-            text-align: center;
-            line-height: 1.2;
+            padding: 6px;
+            overflow: hidden;
+        }
+        .education-logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         .education-content {
@@ -697,7 +699,7 @@
                 <h2 class="section-title">Education</h2>
                 <div class="education-grid">
                     <div class="education-item">
-                        <div class="education-logo">NEU</div>
+                        <div class="education-logo"><img src="images/work/neu.png" alt="neu" /></div>
                         <div class="education-content">
                             <h3>Master of Science, Bioinformatics</h3>
                             <h4>Northeastern University, USA</h4>
@@ -706,7 +708,7 @@
                         </div>
                     </div>
                     <div class="education-item">
-                        <div class="education-logo">MUM</div>
+                        <div class="education-logo"><img src="images/work/mu.png" alt="mu" /></div>
                         <div class="education-content">
                             <h3>Bachelor of Engineering, Biomedical Engineering</h3>
                             <h4>University of Mumbai, India</h4>
@@ -715,7 +717,7 @@
                         </div>
                     </div>
                     <div class="education-item">
-                        <div class="education-logo">UCSD</div>
+                        <div class="education-logo"><img src="images/work/rady.png" alt="rady" /></div>
                         <div class="education-content">
                             <h3>MBA Certification</h3>
                             <h4>Rady School of Management, UC San Diego</h4>
