--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                 <h2 class="section-title">Education</h2>
                 <div class="education-grid">
                     <div class="education-item">
-                        <div class="education-logo"><img src="images/work/neu.png" alt="neu" /></div>
+                        <div class="education-logo"><img src="images/education/neu.png" alt="neu" /></div>
                         <div class="education-content">
                             <h3>Master of Science, Bioinformatics</h3>
                             <h4>Northeastern University, USA</h4>
@@ -708,7 +708,7 @@
                         </div>
                     </div>
                     <div class="education-item">
-                        <div class="education-logo"><img src="images/work/mu.png" alt="mu" /></div>
+                        <div class="education-logo"><img src="images/education/mu.png" alt="mu" /></div>
                         <div class="education-content">
                             <h3>Bachelor of Engineering, Biomedical Engineering</h3>
                             <h4>University of Mumbai, India</h4>
@@ -717,7 +717,7 @@
                         </div>
                     </div>
                     <div class="education-item">
-                        <div class="education-logo"><img src="images/work/rady.png" alt="rady" /></div>
+                        <div class="education-logo"><img src="images/education/rady.png" alt="rady" /></div>
                         <div class="education-content">
                             <h3>MBA Certification</h3>
                             <h4>Rady School of Management, UC San Diego</h4>
