--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 0 15px;
         }
 
         /* Navigation */
@@ -153,7 +153,7 @@
         .mobile-nav-links a {
             color: var(--text-primary);
             text-decoration: none;
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 400;
             transition: color 0.3s ease;
         }
@@ -192,7 +192,7 @@
             min-height: 80vh;
             display: flex;
             align-items: center;
-            padding: 80px 0;
+            padding: 40px 0;
             position: relative;
             overflow: hidden;
         }
@@ -294,14 +294,16 @@
 
         .hero-profile {
             display: flex;
-            align-items: flex-start;
-            gap: 40px;
-            margin-bottom: 60px;
+            flex-direction: column;
+            align-items: center;
+            text-items: center;
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
         .hero-headshot {
-            width: 140px;
-            height: 140px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             background: linear-gradient(135deg, var(--accent-silver) 0%, var(--accent-gold) 100%);
             display: flex;
@@ -319,7 +321,7 @@
 
         .hero-intro h1 {
             font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-            font-size: 48px;
+            font-size: 36px;
             font-weight: 600;
             line-height: 1.1;
             margin-bottom: 15px;
@@ -328,10 +330,10 @@
 
         /* Typewriter Animation for Tagline with Vibrant Animated Gradient */
         .hero-tagline {
-            font-size: 24px;
-            margin-bottom: 20px;
-            line-height: 1.3;
-            min-height: 60px;
+            font-size: 16px;
+            margin-bottom: 15px;
+            line-height: 1.2;
+            min-height: 35px;
             display: flex;
             align-items: center;
         }
@@ -444,23 +446,23 @@
         }
 
         .hero-description p {
-            font-size: 21px;
+            font-size: 16px;
             line-height: 1.5;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
             color: var(--text-secondary);
         }
 
         /* Section Styling */
         .section {
-            padding: 50px 0;
+            padding: 30px 0;
             border-bottom: 1px solid var(--border);
         }
 
         .section-title {
             font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-            font-size: 40px;
+            font-size: 28px;
             font-weight: 600;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-align: center;
             color: var(--text-primary);
         }
@@ -502,20 +504,20 @@
         }
 
         .work-item h3 {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 600;
             margin-bottom: 8px;
             color: var(--text-primary);
         }
 
         .work-dates {
-            font-size: 15px;
+            font-size: 14px;
             color: var(--text-secondary);
             margin-bottom: 15px;
         }
 
         .work-item p {
-            font-size: 17px;
+            font-size: 15px;
             line-height: 1.6;
             color: var(--text-secondary);
         }
@@ -561,20 +563,20 @@
         }
 
         .education-item h3 {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 600;
             margin-bottom: 8px;
             color: var(--text-primary);
         }
 
         .education-item h4 {
-            font-size: 15px;
+            font-size: 14px;
             color: var(--text-secondary);
             margin-bottom: 15px;
         }
 
         .education-item p {
-            font-size: 15px;
+            font-size: 14px;
             line-height: 1.6;
             color: var(--text-secondary);
         }
@@ -633,7 +635,7 @@
         }
 
         .publications-section h2 {
-            font-size: 32px;
+            font-size: 28px;
             font-weight: 600;
             margin-bottom: 40px;
             color: var(--text-primary);
@@ -653,20 +655,20 @@
         }
 
         .publication-item h3 {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 600;
             margin-bottom: 10px;
             color: var(--text-primary);
         }
 
         .publication-authors {
-            font-size: 17px;
+            font-size: 15px;
             color: var(--text-secondary);
             margin-bottom: 10px;
         }
 
         .publication-journal {
-            font-size: 17px;
+            font-size: 15px;
             color: var(--text-secondary);
             font-style: italic;
         }
@@ -679,14 +681,14 @@
         }
 
         .art-intro h2 {
-            font-size: 40px;
+            font-size: 32px;
             font-weight: 600;
             margin-bottom: 30px;
             color: var(--text-primary);
         }
 
         .art-intro p {
-            font-size: 21px;
+            font-size: 18px;
             line-height: 1.6;
             color: var(--text-secondary);
         }
@@ -751,7 +753,7 @@
 
         .footer-text {
             color: var(--text-secondary);
-            font-size: 14px;
+            font-size: 13px;
         }
 
         .footer-text a {
@@ -778,36 +780,14 @@
             .nav-links {
                 display: none;
             }
+            .hero {
+                min-height: 70vh;
+                padding: 60px 0;
+            }
 
             .mobile-menu-toggle {
                 display: block;
             }
-
-            .hero-profile {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                gap: 30px;
-            }
-
-            .hero-intro h1 {
-                font-size: 36px;
-            }
-
-            .hero-tagline {
-                font-size: 20px;
-                min-height: 50px;
-            }
-
-            .hero-description p {
-                font-size: 19px;
-            }
-
-            .hero-headshot {
-                width: 120px;
-                height: 120px;
-            }
-
             .section-title {
                 font-size: 32px;
             }
@@ -849,7 +829,26 @@
                 display: none;
             }
         }
-
+        @media (max-width: 480px) {
+            .hero-headshot {
+                width: 80px;
+                height: 80px;
+            }
+            .hero {
+                min-height: 50vh;
+                padding: 20px 0;
+            }
+            .hero-tagline {
+                font-size: 14px;
+                min-height: 30px;
+            }
+            .hero-intro h1 {
+                font-size: 28px;
+            }
+            .hero-description p {
+                font-size: 14px;
+            }
+        }
         /* Optimize animations for reduced motion preference */
         @media (prefers-reduced-motion: reduce) {
             .typewriter {
@@ -1234,12 +1233,11 @@
             </div>
 
             <div class="gallery-grid">
-                <div class="gallery-item">Artwork 1</div>
-                <div class="gallery-item">Artwork 2</div>
-                <div class="gallery-item">Artwork 3</div>
-                <div class="gallery-item">Artwork 4</div>
-                <div class="gallery-item">Artwork 5</div>
-                <div class="gallery-item">Artwork 6</div>
+                <div class="gallery-item"><img src="images/artworks/Swiss_Riveria" alt="Swiss_Riveria" /></div>
+                <div class="gallery-item"><img src="images/artworks/Grecian_Dreams.jpeg" alt="Grecian_Dreams" /></div>
+                <div class="gallery-item"><img src="images/artworks/California_wine.JPG" alt="California_wine" /></div>
+                <div class="gallery-item"><img src="images/artworks/Lavande_en_Provence.jpg" alt="lavender" /></div>
+                <div class="gallery-item"><img src="images/artworks/colors.jpg" alt="lavender" /></div>
             </div>
         </div>
     </div>
