--- a/index.html
+++ b/index.html
@@ -729,6 +729,13 @@
             transition: transform 0.3s ease;
             border: 1px solid var(--border);
             box-shadow: 0 4px 20px var(--shadow);
+            overflow: hidden;
+        }
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 18px;
         }
 
         .gallery-item:hover {
