--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
             </div>
 
             <div class="gallery-grid">
-                <div class="gallery-item"><img src="images/artworks/Swiss_Riveria" alt="Swiss_Riveria" /></div>
+                <div class="gallery-item"><img src="images/artworks/Swiss_Riveria.png" alt="Swiss_Riveria" /></div>
                 <div class="gallery-item"><img src="images/artworks/Grecian_Dreams.jpeg" alt="Grecian_Dreams" /></div>
                 <div class="gallery-item"><img src="images/artworks/California_wine.JPG" alt="California_wine" /></div>
                 <div class="gallery-item"><img src="images/artworks/Lavande_en_Provence.jpg" alt="lavender" /></div>
