--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
                     <div class="hero-intro">
                         <h1>Parul Kudtarkar</h1>
                         <div class="hero-tagline">
-                            <span class="typewriter" id="typewriter-text">Driving the next era of medicine through AI and genomics.</span>
+                            <span class="typewriter" id="typewriter-text">Building the future of health with AI & Genomics</span>
                         </div>
                         <div class="hero-links">
                             <a href="https://www.linkedin.com/in/parulkudtarkar" class="social-link" title="LinkedIn">
