--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parul Kudtarkar - Senior Bioinformatician</title>
+    <title>Parul Kudtarkar</title>
     <style>
         :root {
             --background: #F9F9F9;
