--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                 <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
                 <li><a href="#" class="nav-link" data-page="publications">Publications</a></li>
                 <li><a href="#" class="nav-link" data-page="art">Art</a></li>
-                <li><button class="theme-toggle" id="theme-toggle">🌙</button></li>
+                <li><button class="theme-toggle" id="theme-toggle">◐</button></li>
             </ul>
             <button class="mobile-menu-toggle" id="mobile-menu-toggle">☰</button>
         </div>
@@ -898,7 +898,7 @@
             <a href="#" class="mobile-nav-link active" data-page="home">Home</a>
             <a href="#" class="mobile-nav-link" data-page="publications">Publications</a>
             <a href="#" class="mobile-nav-link" data-page="art">Art</a>
-            <button class="mobile-theme-toggle" id="mobile-theme-toggle">🌙</button>
+            <button class="mobile-theme-toggle" id="mobile-theme-toggle">◐</button>
         </div>
     </div>
 
