publication page cleanup

--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
         <div class="container">
             <div class="publications-hero">
                 <img src="images/cover-image.jpg" class="cover-image" alt="Cell Metabolism Cover Image" />
-                <p style="font-size: 19px; color: var(--text-secondary); margin-top: 30px; max-width: 800px; margin-left: auto; margin-right: auto;">The Cell Metabolism cover image that accompanies the article illustrates how the T2DKP integrates multiple types of genetic and genomic data to provide insights that can be the building blocks for new therapeutics.</p>
+                <p style="font-size: 10px; color: var(--text-secondary); margin-top: 30px; max-width: 800px; margin-left: auto; margin-right: auto;">The Cell Metabolism cover image that accompanies the article illustrates how the T2DKP integrates multiple types of genetic and genomic data to provide insights that can be the building blocks for new therapeutics.</p>
             </div>
 
             <div class="publications-section">
@@ -1087,46 +1087,46 @@
                 <div class="publication-item">
                     <h3>An integrated map of cell type-specific gene expression in pancreatic islets</h3>
                     <div class="publication-authors">Elgamal, Ruth; <strong>Kudtarkar, Parul</strong>; Melton, Rebecca; Mummey, Hannah; Benaglio, Paola; Okino, Mei-Lin; Gaulton, Kyle J </div>
-                    <div class="publication-journal">Diabetes (2023)</div>
+                    <div class="publication-journal">Diabetes (2023)</div><br>
                     <h3>Leveraging type 1 diabetes human genetic and genomic data in the T1D Knowledge Portal</h3>
                     <div class="publication-authors"><strong>Kudtarkar, Parul</strong>; Costanzo, Maria; Sun, Ying; Jang, Dongkeun; Koesterer, Ryan; Mychaleckyj, Josyf C; Nayak, Uma; Onengut-Gumuscu, Suna; Rich, Stephen S; Flannick, Jason A</div>
-                    <div class="publication-journal">PLoS Biology (2023)</div>
+                    <div class="publication-journal">PLoS Biology (2023)</div><br>
                     <h3>Echinobase: an expanding resource for echinoderm genomic information</h3>
                     <div class="publication-authors"><strong>Kudtarkar, Parul</strong>; Cameron, R. Andrew; </div>
-                    <div class="publication-journal">Database: The Journal of Biological Databases and Curation (2017)</div>
+                    <div class="publication-journal">Database: The Journal of Biological Databases and Curation (2017)</div><br>
                     <h3>Do echinoderm genomes measure up?</h3>
                     <div class="publication-authors">Cameron, R Andrew; <strong>Kudtarkar, Parul</strong>; Gordon, Susan M; Worley, Kim C; Gibbs, Richard A</div>
-                    <div class="publication-journal">Marine genomics (2015)</div>
+                    <div class="publication-journal">Marine genomics (2015)</div><br>
                     <h3>Cost-effective cloud computing: a case study using the comparative genomics tool, roundup</h3>
                     <div class="publication-authors"><strong>Kudtarkar, Parul</strong>; DeLuca, Todd F; Fusaro, Vincent A; Tonellato, Peter J; Wall, Dennis P; </div>
-                    <div class="publication-journal">Evolutionary Bioinformatics (2010)</div>
+                    <div class="publication-journal">Evolutionary Bioinformatics (2010)</div><br>
                     <h3>Cloud computing for comparative genomics</h3>
                     <div class="publication-authors">  Wall, Dennis P; <strong>Kudtarkar, Parul</strong>; Fusaro, Vincent A; Pivovarov, Rimma; Patil, Prasad; Tonellato, Peter J</div>
-                    <div class="publication-journal">BMC bioinformatics (2010)</div>
+                    <div class="publication-journal">BMC bioinformatics (2010)</div><br>
                     <h3>Genetic association and machine learning improves discovery and prediction of type 1 diabetes</h3>
                     <div class="publication-authors">McGrail, Carolyn; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">medRxiv (2024)</div>
+                    <div class="publication-journal">medRxiv (2024)</div><br>
                     <h3>Single cell multiome profiling of pancreatic islets reveals physiological changes in cell type-specific regulation associated with diabetes risk</h3>
                     <div class="publication-authors">Mummey, Hannah M; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">bioRxiv (2024)</div>
+                    <div class="publication-journal">bioRxiv (2024)</div><br>
                     <h3>Sex-specific regulatory architecture of pancreatic islets from subjects with and without type 2 diabetes</h3>
                     <div class="publication-authors">Qadir, Mirza Muhammad Fahd; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">The EMBO Journal (2024)</div>
+                    <div class="publication-journal">The EMBO Journal (2024)</div><br>
                     <h3>The Type 2 Diabetes Knowledge Portal: An open access genetic resource dedicated to type 2 diabetes and related traits</h3>
                     <div class="publication-authors">Costanzo, Maria C; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">Cell metabolism (2023)</div>
+                    <div class="publication-journal">Cell metabolism (2023)</div><br>
                     <h3>Cardiovascular disease knowledge portal: a community resource for cardiovascular disease research</h3>
                     <div class="publication-authors">Costanzo, Maria C; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">Circulation: Genomic and Precision Medicine (2023)</div>
+                    <div class="publication-journal">Circulation: Genomic and Precision Medicine (2023)</div><br>
                     <h3>Single-cell chromatin accessibility identifies pancreatic islet cell type– and state-specific regulatory programs of diabetes risk.</h3>
                     <div class="publication-authors">Chiou, Joshua; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">Nature Genetics (2021)</div>
+                    <div class="publication-journal">Nature Genetics (2021)</div><br>
                     <h3>Single-cell multiomic profiling of human lungs reveals cell-type-specific and age-dynamic control of SARS-CoV2 host genes</h3>
                     <div class="publication-authors">Wang, Allen; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">Elife (2020)</div>
+                    <div class="publication-journal">Elife (2020)</div><br>
                     <h3>Developmental effector gene regulation: Multiplexed strategies for functional analysis</h3>
                     <div class="publication-authors">Wang, Lijun; <strong>Kudtarkar, Parul</strong>; <em>et al.</em> </div>
-                    <div class="publication-journal">Developmental biology (2019)</div>
+                    <div class="publication-journal">Developmental biology (2019)</div><br>
                 </div>
             </div>
 
@@ -1135,22 +1135,22 @@
 <div class="publication-item">
     <h3>AMP CMD Portals</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP CMD Parliament Meeting (2025)</div>
+    <div class="publication-journal">AMP CMD Parliament Meeting (2025)</div><br>
     <h3>Single Cell Maps and Analysis Tools in CMDGA</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP CMD Parliament Meeting (2024)</div>
+    <div class="publication-journal">AMP CMD Parliament Meeting (2024)</div><br>
     <h3>Gene Expression Integration and Representation in CMDGA/KP</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP CMD Parliament Meeting (2023)</div>
+    <div class="publication-journal">AMP CMD Parliament Meeting (2023)</div><br>
     <h3>Representing Genomic Perturbation Studies in CMDGA</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP CMD Leadership Conference (2022)</div>
+    <div class="publication-journal">AMP CMD Leadership Conference (2022)</div><br>
     <h3>Introducing the Common Metabolic Diseases Genome Atlas</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP T2DKP Webinar Series (2021)</div>
+    <div class="publication-journal">AMP T2DKP Webinar Series (2021)</div><br>
     <h3>Diabetes Epigenome Atlas and T2D Knowledge Portal: Connected and Complementary Resources</h3>
     <div class="publication-authors">Kudtarkar, Parul</div>
-    <div class="publication-journal">AMP T2DKP Webinar Series (2019)</div>
+    <div class="publication-journal">AMP T2DKP Webinar Series (2019)</div><br>
 </div>
             </div>
 <div>
@@ -1159,16 +1159,16 @@
   <div class="publication-item">
       <h3>The Type 1 Diabetes Knowledge Portal: An Open-Access Resource for Insights into the Genetic and Genomic Basis of Type 1 Diabetes</h3>
       <div class="publication-authors">Costanzo MC; <strong>Kudtarkar, Parul</strong>; Sun Y; Jang D; Koesterer R; Mychaleckyj J; Nayak U; Onengut-Gumuscu S; Rich SS; Flannick J; Gaulton KJ; Burtt NP. </div>
-      <div class="publication-journal">American Diabetes Association (2022)</div>
+      <div class="publication-journal">American Diabetes Association (2022)</div><br>
       <h3>Type 2 Diabetes Epigenome Data Repository and Resource</h3>
       <div class="publication-authors">Y. Sun;  <strong>Kudtarkar, Parul</strong>; S. Morabito; K Gaulton. </div>
-      <div class="publication-journal">American Society of Human Genetics Annual Meeting (2017)</div>
+      <div class="publication-journal">American Society of Human Genetics Annual Meeting (2017)</div><br>
       <h3>Proteomics Approach to Study Neuronal Regeneration Events of the Sequenced Sea Star Patiria miniata</h3>
       <div class="publication-authors">C Franco; <strong>Kudtarkar, Parul</strong>; <em>et al.</em></div>
-      <div class="publication-journal">The FASEB Journal (2014)</div>
+      <div class="publication-journal">The FASEB Journal (2014)</div><br>
       <h3>Infusion Controller</h3>
       <div class="publication-authors">Ahmed T.; <strong>Kudtarkar, Parul</strong>; <em>et al.</em></div>
-      <div class="publication-journal">International Conference on Biological and Medical Physics (2005)</div>
+      <div class="publication-journal">International Conference on Biological and Medical Physics (2005)</div><br>
   </div>
 </div>
         </div>
