--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
                     <div class="hero-intro">
                         <h1>Parul Kudtarkar</h1>
                         <div class="hero-tagline">
-                            <span class="typewriter" id="typewriter-text">Building the future of health with AI & Genomics</span>
+                            <span class="typewriter" id="typewriter-text">Transforming health through AI and genomics.</span>
                         </div>
                         <div class="hero-links">
                             <a href="https://www.linkedin.com/in/parulkudtarkar" class="social-link" title="LinkedIn">
@@ -1231,9 +1231,9 @@
                 </div>
                 
                 <div class="hero-description">
-                    <p>With over 20 years of experience in bioinformatics, research, and data science, I lead two major initiatives at UC San Diego: PanKbase, a $12.5M NIH-funded pancreas knowledgebase, and the Accelerating Medicines Partnership in Common Metabolic Diseases, a global effort to transform metabolic health.</p>
-                    <p>Trained in biomedical engineering and bioinformatics, my professional journey spans Harvard, Caltech, and UCSD, bridging hardware, cloud computing, AI, and large-scale biological data. I'm deeply technical, but I lead with empathy, building bridges across labs, clinicians, and communities to make sure research doesn't just stay in journals; it changes lives.</p>
-                    <p>Outside of science, I enjoy running, traveling, painting, supporting wildlife conservation, and cooking.</p>
+                    <p>20 years turning biological data into medical breakthroughs. Harvard, Caltech, UCSD. Currently leading multi-million dollar metabolic research at UC San Diego.</p>
+                    <p>Technical expertise. Human empathy. Research that changes lives.</p>
+                    <p>When not in the lab, you'll find me running trails, painting landscapes, or cooking for friends.</p>
                 </div>
             </div>
         </section>
