--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
                 </div>
                 
                 <div class="hero-description">
-                    <p>20 years turning biological data into medical breakthroughs. Harvard, Caltech, UCSD. Currently leading multi-million dollar metabolic research at UC San Diego.</p>
+                    <p>20 years turning biological data into medical breakthroughs. Harvard, Caltech, UCSD. Currently the lead developer on multi-million dollar metabolic research at UC San Diego.</p>
                     <p>Technical expertise. Human empathy. Research that changes lives.</p>
                     <p>When not in the lab, you'll find me running trails, painting landscapes, or cooking for friends.</p>
                 </div>
